# qhchina

./: .gitignore  AGENTS.md  CNAME  Intro_to_Python_for_Chinese_Humanities.ipynb  Intro_to_Python_for_Chinese_Humanities_Part_1_Basics.ipynb  LICENSE  README.md  __init__.py  make_docs.py  pyproject.toml  requirements.txt  setup.py  test_final_features.py
.cursor/rules/: python-environment.mdc
.github/workflows/: build_wheels.yml  main.yml
analysis/: collocations.py  comparison.py
docs/: 404.md  Gemfile  _config.yml  bert_classifier_docs.md  collocations_docs.md  corpora_docs.md  index.md  posts.md  resources.md  topic_modeling_docs.md  word_embeddings_docs.md
docs/_data/: quotes.json
docs/_includes/: footer.html  head-custom.html  navigation.html  random_quote.html
docs/_layouts/: default.html  docs_with_sidebar.html  post.html
docs/_posts/: 2023-06-01-welcome-to-qhchina-lab.md  2023-07-15-new-release-qhchina-v1.md  2025-04-16-new-release-qhchina.md  2025-04-25-weihai-lecture-llm-defamiliarization.md
docs/_sass/: main.scss
docs/about/: index.md
docs/assets/: search-index.json
docs/assets/css/: style.css  style.scss
docs/assets/js/: search.js
docs/pkg_docs/: index.md
docs/pkg_docs/bert_classifier/: index.md
docs/pkg_docs/collocations/: index.md
docs/pkg_docs/corpora/: index.md
docs/pkg_docs/helpers/: index.md
docs/pkg_docs/preprocessing/: index.md
docs/pkg_docs/stylometry/: index.md
docs/pkg_docs/topic_modeling/: index.md
docs/pkg_docs/word_embeddings/: index.md
docs/projects/: index.md  perplexity-games.md  sublime-narrative.md  vectors-of-violence.md
docs/projects/brevity-and-breadth/: index.md
docs/projects/cognitive-stylometry/: index.md
docs/projects/geometry-parallelism/: index.md
docs/projects/parallelism-geometry/: index.md
docs/projects/perplexity-games/: index.md
docs/projects/poly-temporal-multi-layered/: index.md
docs/projects/sublime-narrative/: index.md
docs/projects/techno-cognitivism/: index.md
docs/projects/vectors-of-violence/: index.md
docs/projects/verbs-chinese-poetry/: index.md
docs/projects/words-close-to-heart/: index.md
docs/public/: index.md
docs/publications/: index.md
docs/qhchina_docs/: index.md
docs/qhchina_docs/bert_classifier/: index.md
docs/qhchina_docs/collocations/: index.md
docs/qhchina_docs/corpora/: index.md
docs/qhchina_docs/preprocessing/: index.md
docs/qhchina_docs/topic_modeling/: index.md
docs/qhchina_docs/word_embeddings/: index.md
docs/resources/: index.md
projects/: README.md
qhchina/: Kunqu_GEN_AI.ipynb  README.md  __init__.py  _config.yml  bert_classifier_docs.md  config.py  corpus.py  index.html  index.md  utils.py
qhchina/analysis/: __init__.py  collocations.py  modeling.py  vectors.py
qhchina/analytics/: README.md  __init__.py  collocations.py  modeling.py  perplexity.py  stylometry.py  tempref_word2vec.py  textreuse.py  topicmodels.py  vectors.py  word2vec.py  word2vec_utils.py
qhchina/analytics/cython_ext/: README.md  __init__.py  collocations.cpp  collocations.pyx  fisher.pyx  lda_sampler.pyx  statistics.pyx  textreuse.pyx  word2vec.cpp  (+1 more)
qhchina/docs/: index.md
qhchina/educational/: llms.py  visuals.py
qhchina/helpers/: __init__.py  fonts.py  github.py  stats.py  texts.py
qhchina/preprocessing/: __init__.py  normalization.py  segmentation.py
results/semantic_change/: results_1960s->1980s.txt  results_1980s->2000s.txt
scripts/: generate_api_docs.py
tests/: conftest.py  test_collocations.py  test_config.py  test_corpus.py  test_dynamic_word2vec.py  test_helpers.py  test_new_features.py  test_perplexity.py  test_preprocessing.py  test_statistics.py  test_stylometry.py  test_textreuse.py  test_topicmodels.py  test_utils.py  test_vectors.py  test_word2vec.py
tutorials/: Cognitive_Stylometry_as_an_LLM_based_Methodology_in_Chinese_Literary_Studies.ipynb  Intro_to_Python_for_Chinese_Humanities.ipynb  Intro_to_Python_for_Chinese_Humanities_Part_1_Basics.ipynb  Intro_to_Python_for_Chinese_Humanities_Part_2_Working_with_Texts.ipynb  Intro_to_Python_for_Chinese_Humanities_Part_3_Collocation_Analysis.ipynb  Intro_to_Python_for_Chinese_Humanities_Part_4_Network_Analysis.ipynb  Intro_to_Python_for_Chinese_Humanities_Part_5_OCR.ipynb  Intro_to_Python_for_Chinese_Humanities_Part_6_Time_Series_Analysis.ipynb  Kunqu_GEN_AI.ipynb  Novel2Image.ipynb
tutorials/data/: GaoErTai_XunzhaoJiayuan_1.txt  GaoErTai_XunzhaoJiayuan_2.txt  GaoErTai_XunzhaoJiayuan_3.txt  hk_stats.csv  kunqu_dramas.txt  stopwords_zh.txt  张爱玲_倾城之恋.txt
utils/: __init__.py
website/: Gemfile  _config.yml  about.md  index.md  projects.md  resources.md
website/_includes/: navigation.html
website/_layouts/: default.html
website/_posts/: 2023-06-01-welcome-to-qhchina-lab.md  2023-07-15-new-release-qhchina-v1.md
website/docs/: index.md
(+18 files in other folders)
