# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29.24", "numpy>=1.19.0", "scipy>=1.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qhchina"
version = "0.0.42"
authors = [
  { name = "Maciej Kurzynski", email = "makurz@gmail.com" },
]
description = "A Python package for NLP tasks related to Chinese text."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["digital humanities", "nlp", "Chinese", "text analysis", "corpus linguistics", "topic modeling"]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "tqdm",
    "setuptools"
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"qhchina" = ["analytics/cython_ext/*.pyx", "data/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.so", "*.pyd"]

[project.urls]
"Homepage" = "https://github.com/mcjkurz/qhchina"
"Documentation" = "https://mcjkurz.github.io/qhchina/"
"Bug Tracker" = "https://github.com/mcjkurz/qhchina/issues"