# pyproject.toml

[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython >= 0.29.24",
    "numpy >= 2.0.2",
    "scipy >= 1.14.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "qhchina"
version = "0.0.54"
authors = [
  { name = "Maciej Kurzynski", email = "makurz@gmail.com" },
]
description = "A Python package for NLP tasks related to Chinese text."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["digital humanities", "nlp", "Chinese", "text analysis", "corpus linguistics", "topic modeling"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 2.0.2",
    "scipy >= 1.14.1",
    "matplotlib >= 3.10.0",
    "scikit-learn >= 1.6.1",
    "tqdm",
    "pandas"
]

[tool.setuptools.packages.find]
exclude = ["tests", "test"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"qhchina" = ["analytics/cython_ext/*.pyx", "data/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.so", "*.pyd"]

[project.urls]
"Homepage" = "https://www.qhchina.org/"
"Documentation" = "https://www.qhchina.org/pkg_docs"
"Bug Tracker" = "https://github.com/mcjkurz/qhchina/issues"